environments/gloo-gateway/gateway-api/1.18/argo-rollouts/rollouts-demo/rollouts-demo/strategies/canary-single-rt/base/rollouts-demo-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rollouts-demo
  namespace: rollouts-demo
spec:
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: rollouts-demo-active
          port: 8000
        - name: rollouts-demo-preview
          port: 8000
